# prism

./: .gitignore  README.md  main.py  pyproject.toml  test_main.py
ftl-scripts/: FTL_LOCAL_USAGE.md  README.md  ftl-config.example.sh  run-ftl-local.sh  run-ftl-multilang.sh  setup-ftl.sh
sample-app/: .gitignore  README.md  build.gradle  gradle.properties
sample-app/app/: build.gradle
sample-app/app/src/main/: AndroidManifest.xml
sample-app/app/src/main/java/com/example/sampleapp/: MainActivity.kt
sample-app/app/src/main/res/drawable/: ic_launcher_foreground.xml
sample-app/app/src/main/res/layout/: activity_main.xml
sample-app/app/src/main/res/values/: strings.xml  themes.xml
sample-app/app/src/main/res/values-hi/: strings.xml
